# mit-panel

./: Dockerfile  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  install.sh  pyproject.toml
backend/: alembic.ini  app.py
backend/api/public/: routers.py
backend/api/superadmin/: routers.py
backend/db/: crud.py  engin.py  model.py
backend/schema/: _input.py
backend/services/: backup_scheduler.py  task_handler.py
backend/services/marzban/: api.py
backend/utils/: __init__.py  ads.py  settings_store.py  telegram.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx
frontend/src/components/: Sidebar.tsx  ThemeToggle.tsx  UserMenu.tsx
frontend/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  select.tsx  table.tsx  textarea.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AdminsPage.tsx  DashboardPage.tsx  LoginPage.tsx  PanelsPage.tsx  SettingsPage.tsx
frontend/src/pages/components/: AdminFormDialog.tsx  PanelFormDialog.tsx  UserFormDialog.tsx
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
