[project]
name = "mit-panel"
version = "2.9.30"
description = "MIT Panel - A comprehensive admin dashboard system for managing VPN panels (Marzban, 3x-ui, Tx-ui, Guard) with role-based access control."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-settings==2.9.1",
    "requests==2.32.3",
    "httpx",
    "SQLAlchemy==2.0.39",
    "alembic==1.15.1",
    "Dependencies",
    "psutil",
    "PyJWT==2.10.1",
    "python-dotenv==1.1.0",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "bcrypt",
    "python-multipart",

]
